--- a/index.html
+++ b/index.html
@@ -2,23 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Website</title>
+    <title>My Resume</title>
 </head>
 <body>
-    <h1>Mahdi Mosayebi's Portfolio</h1>
-    <h2>I'm a web developer</h2>
-    <hr/>
-
-    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-    <img src="./assets/images/movie-ranking.png" width="200" height="auto">
-
-    <br/>
-   
-     <h3><a href="./public/birthday-invite.html"> Birthday Invitation Project</a></h3>
-    <img src="./assets/images/birthday-invite.png" width="160" height="160"/>
-
-    <hr/>
-    <a href="./public/contact.html">Contact Me</a>
-    <a href="./public/about.html">About Me</a>
+    <h1>Mahdi Mosayebi's Resume</h1>
+    <p>Summary 
+        Dynamic and detail-oriented web developer with over 1 year of experience in building robust web applications and enhancing user experiences.<br/>
+        Proficient in HTML, CSS, JavaScript, and modern frameworks such as React and Angular.
+        Strong understanding of responsive design, API integration, and version control systems like Git.
+        Adept at collaborating with cross-functional teams to deliver high-quality projects on time.
+        Passionate about continuous learning and staying updated with industry trends.
+    </p>
+    <un>
+        <li></li>
+    </un>
+    
 </body>
 </html>
